k8s/dev/sea-mengxin-ml-loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: sea-mengxin-ml-loadbalancer
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
    # kubernetes.io/ingress.global-static-ip-name: "mengxin-sea-k8s-httpbin-internal"
spec:
  selector:
    app: sea-mengxin-ml-web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
