k8s/dev/ingress-controller-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mengxin-sea1-k8s-ingress-controller-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app: nginx-ingress
      release: mengxin-sea1-k8s-ingress-controller
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/12
        - ipBlock:
            cidr: 10.16.0.0/24
        - ipBlock:
            cidr: 10.16.8.0/21
        - ipBlock:
            cidr: 10.16.2.0/23
        - ipBlock:
            cidr: 173.245.48.0/20
        - ipBlock:
            cidr: 103.21.244.0/22
        - ipBlock:
            cidr: 103.22.200.0/22
        - ipBlock:
            cidr: 103.31.4.0/22
        - ipBlock:
            cidr: 141.101.64.0/18
        - ipBlock:
            cidr: 108.162.192.0/18
        - ipBlock:
            cidr: 190.93.240.0/20
        - ipBlock:
            cidr: 188.114.96.0/20
        - ipBlock:
            cidr: 197.234.240.0/22
        - ipBlock:
            cidr: 198.41.128.0/17
        - ipBlock:
            cidr: 162.158.0.0/15
        - ipBlock:
            cidr: 104.16.0.0/12
        - ipBlock:
            cidr: 172.64.0.0/13
        - ipBlock:
            cidr: 131.0.72.0/22
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
  egress:
    - {}
